crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__parenthesized__parenthesized.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/parenthesized/parenthesized.py
---
## AST

```
Module(
    ModModule {
        node_index: AtomicNodeIndex(..),
        range: 0..125,
        body: [
            Expr(
                StmtExpr {
                    node_index: AtomicNodeIndex(..),
                    range: 66..70,
                    value: Starred(
                        ExprStarred {
                            node_index: AtomicNodeIndex(..),
                            range: 67..69,
                            value: Name(
                                ExprName {
                                    node_index: AtomicNodeIndex(..),
                                    range: 68..69,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: AtomicNodeIndex(..),
                    range: 119..120,
                    value: Name(
                        ExprName {
                            node_index: AtomicNodeIndex(..),
                            range: 119..120,
                            id: Name("x"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: AtomicNodeIndex(..),
                    range: 124..125,
                    value: NumberLiteral(
                        ExprNumberLiteral {
                            node_index: AtomicNodeIndex(..),
                            range: 124..125,
                            value: Int(
                                1,
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | # Starred expression isn't allowed in a parenthesized expression.
2 | (*x)
  |  ^^ Syntax Error: Starred expression cannot be used here
3 |
4 | # Unparenthesized named expression is allowed.
  |


  |
4 | # Unparenthesized named expression is allowed.
5 | x := 1
  |   ^^ Syntax Error: Expected a statement
  |
